--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 gradio
 transformers
-https://github.com/woct0rdho/triton-windows/releases/download/v3.1.0-windows.post5/triton-3.1.0-cp310-cp310-win_amd64.whl
+https://github.com/woct0rdho/triton-windows/releases/download/v3.1.0-windows.post5/triton-3.1.0-cp310-cp310-win_amd64.whl platform_system == "Windows"
+triton platform_system == "Linux"
